Fixed Maps not getting API key, fixed Adv image gallery - featured layout bug

--- a/blocks/contact-form/editor.css
+++ b/blocks/contact-form/editor.css
@@ -52,6 +52,7 @@
 	> .block-editor-inner-blocks
 	.block-editor-block-list__block {
 	width: 100%;
+	margin: 0;
 }
 /* - Cols - */
 .blockons-contact-form .blockons-cf-fields .block-list-appender.wp-block {
